# pinkweather

./: .gitignore  DEPENDENCIES.md  HISTORICAL_NARRATIVE_GENERATION.md  Makefile  README.md  TECHNICAL_OVERVIEW.md  check_install.py  code.py  debug_display.py  display_logic.py  http_server.py  install.bat  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  weather_example.py
300x400/CIRCUITPY/: alt_weather_header.py  astro_utils.py  code.py  config.py  date_utils.py  display.py  forecast_row.py  header.py  hyperl15reg.pcf  hyperl20bold.pcf  hyperl20bolditalic.pcf  hyperl20italic.pcf  hyperl20reg.pcf  hyperl9reg.pcf  logger.py  moon_phase.py  openweathermap.py  sd_debug.py  text_renderer.py  vollkorn20black.pcf  vollkorn20blackitalic.pcf  vollkorn20italic.pcf  vollkorn20reg.pcf  vollkorn30black.pcf  vollkorn30blackitalic.pcf  vollkorn30italic.pcf  vollkorn30reg.pcf  weather_api.py  weather_description.py  weather_header.py  weather_history.py  weather_narrative.py  weather_persistence.py
CIRCUITPY/: barlowcond30.pcf  barlowcond60.pcf  boot_out.txt  code.py  display.py  display_logic.py  hardware_adapter.py
iconz/: convert_moon_25px.py  convert_weather_icons.py
misc/: adafruit-circuitpython-adafruit_feather_rp2040-en_US-10.0.3.uf2  open-meteo-40.65N73.98W25m.csv  open-meteo-43.70N79.40W165m.csv  openweather-api-example-aqi-forecast.json  openweather-api-example-aqi.json  openweather-api-example.json  sunsigndatez.txt
preview/: .env.example  api_cache.py  batch.py  config.py  data_loader.py  http_server.py  main.py  pygame_manager.py  test_api_integration.py
preview/batch/: generator.py  template.html
preview/shared/: config.py  (+11 more)
templates/: index.html
web/: api_cache.py  barlowcond30.bdf  barlowcond60.bdf  cached_weather.py  csv_config.py  debug_colors.py  debug_image.py  debug_rect.py  debug_renderer.py  display_renderer_old.py  final_test.py  hardware_exact_renderer.py  http_server.py  inspect_line.py  inspect_line_deeper.py  mock_history.py  mock_weather_data.py  open_meteo_converter.py  shared_weather_engine.py  simple_web_render.py  test_debug.py  test_humidity_labels.py  ultimate_simple.py  web_adapter.py  web_adapter_400x300.py  web_renderer.py  weblogz.txt
(+50 files in other folders)
