[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pinkweather"
version = "0.1.0"
description = "Weather display system for e-ink displays with web development interface"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Weather Display Developer"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Hardware",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.8"
dependencies = [
    "Pillow>=9.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "pytest>=7.0.0",
    "mypy>=0.950",
]
microcontroller = [
    # Note: These are CircuitPython libraries, not pip installable
    # Listed here for documentation purposes
    # "adafruit-circuitpython-epd>=2.0.0",
    # "adafruit-circuitpython-busio>=5.0.0",
    # "adafruit-circuitpython-digitalio>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pinkweather"
Repository = "https://github.com/yourusername/pinkweather.git"
Documentation = "https://github.com/yourusername/pinkweather#readme"

[project.scripts]
weather-server = "http_server:run_server"
weather-preview = "weather_example:main"

[tool.hatch.build.targets.wheel]
packages = ["display_renderer.py", "http_server.py", "weather_example.py"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
